--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,33 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #121212;
+  color: rgba(244, 244, 244, 1);
+  overflow-y:scroll;
+}
+
+h1 {
+  font-family: Actor;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 43px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin: 0;
+
+}
+p{
+  margin: 0;
+}
+
+h3 {
+  font-family: Abhaya Libre SemiBold;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+
 }
 
 code {
