--- a/src/components/days/styles.module.scss
+++ b/src/components/days/styles.module.scss
@@ -2,9 +2,9 @@
     transition: 0.3s;
     background: grey;
     color: white;
-    border-radius: 1rem;
-    opacity: 0.1;
+    opacity: 0.5;
     border: none;
+    font-size: 2rem;
   
     &:hover {
       opacity: 1;
