--- a/src/components/task/styles.module.scss
+++ b/src/components/task/styles.module.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
 }
 
-.inputs_contaier {
+.inputsContaier {
   display: flex;
   flex-direction: column;
   width: 68%;
@@ -20,15 +20,38 @@
 
 
 .delete,
-.plus { 
+.plus {
   transition: 0.3s;
   background: grey;
   color: white;
   border-radius: 1rem;
-  opacity: 0.1;
+  opacity: 0.5;
   border: none;
 
   &:hover {
     opacity: 1;
   }
+}
+
+.basicInput {
+  font-style: normal;
+  font-weight: 600;
+  background-color: transparent;
+  border: none;
+
+}
+.inputHeader{
+  @extend .basicInput;
+  font-size: 24px;
+  line-height: 28px;
+
+  color: #F4F4F4;
+}
+.inputDesc{
+  @extend .basicInput;
+  font-size: 14px;
+  line-height: 17px;
+  
+  color: rgba(255, 255, 255, 0.6);
+  
 }
