--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,12 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Noto Sans', sans-serif;
   background-color: #121212;
   color: rgba(244, 244, 244, 1);
   overflow-y:scroll;
 }
 
 h1 {
-  font-family: Actor;
   font-size: 36px;
   font-weight: 400;
   line-height: 43px;
@@ -25,7 +20,6 @@ p{
 }
 
 h3 {
-  font-family: Abhaya Libre SemiBold;
   font-size: 24px;
   font-weight: 600;
   line-height: 28px;
@@ -34,7 +28,3 @@ h3 {
 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
