--- a/src/components/main/styles.module.scss
+++ b/src/components/main/styles.module.scss
@@ -17,7 +17,7 @@ $duration: 150s;
 
 @keyframes ticker {
   0% {
-    transform: translate3d(0, 0, 0);
+    transform: translate3d(100px, 0, 0);
     visibility: visible;
   }
 
